--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,241 @@
-body {
+/* *{margin: 0; padding: 0;box-sizing: border-box;}
+/*
+.heading{
+color: #fa9191;
+  text-align: center;
+ text-shadow: yellow;
+  font-weight: bold;
+  margin: 20px;
+  font-family: 'Bona Nova', serif;
+
+}.unique{
+/* text-align: center;
+justify-content: center;
+margin: 10px;
+padding: 10px;
+}
+.img_woek{
+display: flex;
+justify-content: center;
+}
+.img_woek img{
+  height: 150px;
+  width: 250px;
+
+}
+.myheading{
+  padding:30px 0px ;
+  text-align:center;
+  text-align: center;
+  background-color: grey;
+  font-size: 30px;
+  margin-bottom: 30px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  letter-spacing: 10px; */
+
+
+/* body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+   background-color:white;
+  padding:0;
+  box-sizing: border-box;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+} */ 
+
+
+
+/* .heading_style{
+  background-color: antiquewhite;
+  text-align: center;
+  margin: 20px;
+  padding: 30px 0px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  text-transform: capitalize;
+  letter-spacing: 3px;
+  font-size: 30px;
+  font-weight: 500;
+} */
+/* .box{
+  display: flex;
+  margin: 20px;
+  padding:30px 0px;
+} */
+/* body{
+  display: flex;
+  text-align: center;
+ justify-content: center;
+ margin-top: 50px;
+ display: flexbox;
+ background-color: floralwhite;
+ 
+  
+
+}
+.hye{
+
+  color: black;
+  background-color: plum;
+}
+.game{
+
+  font-weight: bold;
+
+*/
+
+ /* *{
+
+box-sizing: border-box;
+padding: 0;
+margin: 0;
+font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+.main_div{
+ width: 100%;
+ height: 100vh;
+ background-color: #6983aa;
+ display: flex;
+ flex-direction: row;
+ justify-content: center;
+ text-align: center;
+ align-items: center;
+}
+  .center_div{
+    width: 25%;
+    height: 80vh;
+    background-color: aliceblue;
+    border-radius: 15px;
+    box-shadow: 5px 5px 25px -5px rgba(0,0,0, 5);
+  }
+  h1{
+    color: white;
+    background-color: purple;
+    margin-bottom: 10px;
+  }
+  input{
+    text-align: center;
+    height: 30px;
+    top: 10px;
+    font-size: 20px;
+    font-weight: 500;
+    width: 50%;
+    border-bottom: 2px solid powderblue ;
+  }
+  button{
+background-color: purple;
+ width: 40px;
+ margin-left: 10px;
+ min-height: 30px;
+ border-radius: 100px;
+ font-size: 20px;
+ box-shadow: 5px 5px 25px -5px rgba(0, 0, 0,0.3);
+
+  } 
+  ol{
+
+
+    margin-top: 30px;
+
+  }
+  ol li{
+
+    font-size: 20px;
+    margin: 5px;
+    text-align: left;
+    min-height: 20px;
+    display: flex;
+    color: #8566aa;
+    text-transform: capitalize;
+
+
+  }
+  button:hover{
+    background-color: peru;
+  }
+  .todo_list{
+    display: flex;
+    justify-content: left;
+    flex-direction: row;
+    align-items: center;
+
+  }
+  .todo_list .fa-times{
+    width: 25px;
+    height: 25px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    background-color: #8566aa;
+    border-radius: 50%;
+    margin: 0 10px 0 35px ;
+    color: aliceblue;
+    box-shadow: 5px 5px 15px -5px ;
+  }
+  .todo_list.todo_list .fa-times:hover{
+    background-color: red;
+   } 
+  .todo_list.todo_list .fa-times .list_style{
+    color: crimson;
+  }  */
+   @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap');
+
+*{
+
+    margin:200;
+    padding: 2px;
+    box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ .container-fluid{
+    width: 90%;
+    margin:auto;
 }
+.table-responsive{
+    max-height: 700px;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 25px 50px -12px;
+}
+tr:hover{
+    background-color: #ffa;
+}
+
+td,
+th{
+    position: relative
+}
+.table td,
+ .table.th{
+    padding: 0.75em;
+    vertical-align:top ;
+    border-top: none;
+}
+td:hover::after,
+th:hover::after{
+    content:"";
+    position:absolute;
+    background-color: #f2f2f2;
+    left:0;
+    top:-5000px;
+    height: 5000px;
+    width:100%;
+    z-index: -1;
+}
+.table tr td:hover:nth-child(4){
+ background-color:rgb(231, 83, 115);
+ color: aliceblue;
+border: 0.5px solid rgb(12, 12, 12);
+
+}
+.table tr td:hover{
+  background-color: rgb(117, 223, 122);
+  color: aliceblue;
+  border: 0.5px solid rgb(12, 12, 12);
+}
+
+.thead dark{
+    font-weight: bold;
+    text-transform: uppercase;
+
+
+
+}  
